--- a/webclient.feature.nomination/src/main/resources/i18n/nom_messages.properties
+++ b/webclient.feature.nomination/src/main/resources/i18n/nom_messages.properties
@@ -1,6 +1,8 @@
 feature.nomination.title=Abwicklung
 feature.NOM=Feature zum komerziellen Abwickeln von Vertr\u00C4gen
 
+accessrole.NOM_ADMIN=Rolle zum Administrieren der Abwicklung
+
 nom.menuTreeMonitor=Monitoring
 nom.menuTreeToDoMonitor=ToDo-Monitor
 nom.menuTreeToDoMonitorExtended=ToDo-Monitor erweitert
