--- a/webclient.feature.nomination/src/main/resources/i18n/nom_messages_en.properties
+++ b/webclient.feature.nomination/src/main/resources/i18n/nom_messages_en.properties
@@ -1,6 +1,8 @@
 feature.nomination.title=Nomination
 feature.NOM=Feature for nomination of commercial contracts
 
+accessrole.NOM_ADMIN=role to administrate the nomination
+
 nom.menuTreeMonitor=Monitoring
 nom.menuTreeTodoMonitor=ToDo-Monitor
 nom.menuTreeToDoMonitorExtended=ToDo-Monitor extended
