process feature hinzugefügt

--- a/webclient.feature.nomination/src/main/resources/i18n/nom_messages.properties
+++ b/webclient.feature.nomination/src/main/resources/i18n/nom_messages.properties
@@ -1,7 +1,7 @@
 feature.nomination.title=Abwicklung
 feature.NOM=Feature zum komerziellen Abwickeln von Vertr\u00C4gen
 
-accessrole.NOM_ADMIN=Rolle zum Administrieren der Abwicklung
+accessrole.NOM_ADMIN=Abwicklung administrieren
 
 nom.menuTreeMonitor=Monitoring
 nom.menuTreeToDoMonitor=ToDo-Monitor
