--- a/webclient/src/main/resources/i18n/sec_messages.properties
+++ b/webclient/src/main/resources/i18n/sec_messages.properties
@@ -181,9 +181,9 @@ menuTreeRemoteSystemConfig=Konfiguration
 menuTreeRemoteSystem=Fremdsysteme
 menuTreeRemoteLogin=Anmeldung
 
-accessrole.SEC_FORCE_PASSWORD_CHANGE=Rolle zum Erzwingen einer Passwort\u00E4nderung
-accessrole.SEC_SETUP_SYSTEM=Rolle zum Konfigurieren des Gesamtsystems
-accessrole.SEC_ADMIN=Rolle zum Administrieren der Benutzer- und Berechtigungsverwaltung
+accessrole.SEC_FORCE_PASSWORD_CHANGE=Passwort\u00E4nderung erzwingen
+accessrole.SEC_SETUP_SYSTEM=Gesamtsystems konfigurieren
+accessrole.SEC_ADMIN=Benutzer- und Berechtigungsverwaltung administrieren
 
 client.rejected.duplicated.name=Name schon vorhanden
 client.rejected.size.name=Muss zwischen 2 und 20 Zeichen haben
