--- a/webclient/src/main/resources/i18n/sec_messages.properties
+++ b/webclient/src/main/resources/i18n/sec_messages.properties
@@ -180,6 +180,8 @@ menuTreeLdapConfig=LDAP
 menuTreeRemoteSystemConfig=Konfiguration
 menuTreeRemoteSystem=Fremdsysteme
 menuTreeRemoteLogin=Anmeldung
+menuTreeStatistic=Statistik
+menuTreeGlobalStatistic=Gobal
 
 accessrole.SEC_FORCE_PASSWORD_CHANGE=Passwort\u00E4nderung erzwingen
 accessrole.SEC_SETUP_SYSTEM=Gesamtsystems konfigurieren
