--- a/webclient/src/main/resources/i18n/sec_messages_en.properties
+++ b/webclient/src/main/resources/i18n/sec_messages_en.properties
@@ -180,6 +180,8 @@ menuTreeLdapConfig=LDAP
 menuTreeRemoteSystemConfig=Configuration
 menuTreeRemoteSystem=Remote systems
 menuTreeRemoteLogin=Login
+menuTreeStatistic=Statistics
+menuTreeGlobalStatistic=Global
 
 accessrole.SEC_FORCE_PASSWORD_CHANGE=Role to force password change after login
 accessrole.SEC_SETUP_SYSTEM=Role to administrate the complete system
