--- a/webclient/src/main/resources/i18n/sec_messages.properties
+++ b/webclient/src/main/resources/i18n/sec_messages.properties
@@ -162,6 +162,13 @@ remoteLoginTablePassword=Passwort
 remoteLoginTableStatus=Status
 remoteLoginActionSave=Speichern
 
+statisticGlobalTitle=Allgemeine Benutzer Statistik
+statisticGlobalChartTitle=Anzahl und Art der Anmeldeversuche pro Nutzer
+statisticGlobalChartAttempts=Anmeldeversuche
+statisticGlobalChartAttemptsSum=Anmeldeversuche gesamt
+statisticGlobalChartAttemptsOk=erfolgreich
+statisticGlobalChartAttemptsFailed=fehlgeschlagen
+
 buttonDone=Schlie\u00DFen
 menuTreeClient=Mandanten
 menuTreeClientConfig=Konfiguration
@@ -181,7 +188,7 @@ menuTreeRemoteSystemConfig=Konfiguration
 menuTreeRemoteSystem=Fremdsysteme
 menuTreeRemoteLogin=Anmeldung
 menuTreeStatistic=Statistik
-menuTreeGlobalStatistic=Gobal
+menuTreeGlobalStatistic=Allgemein
 
 accessrole.SEC_FORCE_PASSWORD_CHANGE=Passwort\u00E4nderung erzwingen
 accessrole.SEC_SETUP_SYSTEM=Gesamtsystems konfigurieren
