--- a/webclient/src/main/resources/i18n/sec_messages_en.properties
+++ b/webclient/src/main/resources/i18n/sec_messages_en.properties
@@ -162,6 +162,13 @@ remoteLoginTablePassword=Password
 remoteLoginTableStatus=Status
 remoteLoginActionSave=Save
 
+statisticGlobalTitle=Global user statistics
+statisticGlobalChartTitle=Amount and type of login attempts per user
+statisticGlobalChartAttempts=Login attempts
+statisticGlobalChartAttemptsSum=Login attempts sum up
+statisticGlobalChartAttemptsOk=successful
+statisticGlobalChartAttemptsFailed=failed
+
 buttonDone=Close
 menuTreeClient=Client
 menuTreeClientConfig=Configuration
