--- a/webclient/src/main/resources/i18n/sec_messages.properties
+++ b/webclient/src/main/resources/i18n/sec_messages.properties
@@ -168,6 +168,7 @@ statisticGlobalChartAttempts=Anmeldeversuche
 statisticGlobalChartAttemptsSum=Anmeldeversuche gesamt
 statisticGlobalChartAttemptsOk=erfolgreich
 statisticGlobalChartAttemptsFailed=fehlgeschlagen
+statisticGlobalChartHeatTitle=Zeitliches Aufkommen von Anmeldeversuchen pro Nutzer 
 
 buttonDone=Schlie\u00DFen
 menuTreeClient=Mandanten
