--- a/webclient/src/main/resources/i18n/sec_messages_en.properties
+++ b/webclient/src/main/resources/i18n/sec_messages_en.properties
@@ -168,6 +168,7 @@ statisticGlobalChartAttempts=Login attempts
 statisticGlobalChartAttemptsSum=Login attempts sum up
 statisticGlobalChartAttemptsOk=successful
 statisticGlobalChartAttemptsFailed=failed
+statisticGlobalChartHeatTitle=Heat map of login attempts per user
 
 buttonDone=Close
 menuTreeClient=Client
