--- a/webclient/src/main/resources/i18n/sec_messages.properties
+++ b/webclient/src/main/resources/i18n/sec_messages.properties
@@ -194,6 +194,7 @@ menuTreeGlobalStatistic=Allgemein
 accessrole.SEC_FORCE_PASSWORD_CHANGE=Passwort\u00E4nderung erzwingen
 accessrole.SEC_SETUP_SYSTEM=Gesamtsystems konfigurieren
 accessrole.SEC_ADMIN=Benutzer- und Berechtigungsverwaltung administrieren
+accessrole.SEC_USER=Benutzer- und Berechtigungsverwaltung benutzen
 
 client.rejected.duplicated.name=Name schon vorhanden
 client.rejected.size.name=Muss zwischen 2 und 20 Zeichen haben
