--- a/webclient/src/main/resources/i18n/sec_messages_en.properties
+++ b/webclient/src/main/resources/i18n/sec_messages_en.properties
@@ -194,6 +194,7 @@ menuTreeGlobalStatistic=Global
 accessrole.SEC_FORCE_PASSWORD_CHANGE=Role to force password change after login
 accessrole.SEC_SETUP_SYSTEM=Role to administrate the complete system
 accessrole.SEC_ADMIN=Role to administrate the security unit
+accessrole.SEC_USER=Role to use the security unit
 
 client.rejected.duplicated.name=Name already existing
 client.rejected.size.name=Must have a size between 2 and 20
