responsive menu part 1

--- a/webclient/src/main/resources/i18n/sec_messages.properties
+++ b/webclient/src/main/resources/i18n/sec_messages.properties
@@ -12,7 +12,7 @@ loginFailureL=Konto ist gesperrt
 loginFailureLdapDisabled=LDAP-Verbindung ist deaktiviert. Bitte wenden Sie sich an den Systemadministrator.
 force.pw.change=Passwort\u00E4nderung erforderlich
 client=Mandant
-user=Benutzer
+user=Benutzer: 
 logout=Logout
 switchLocale=Sprache wechseln
 process_monitor=Prozessmonitor
