--- a/webclient/src/main/resources/i18n/sec_messages_en.properties
+++ b/webclient/src/main/resources/i18n/sec_messages_en.properties
@@ -12,7 +12,7 @@ loginFailureL=Account is locked
 loginFailureLdapDisabled=LDAP-Connection is disabled. Please contact system administrator.
 force.pw.change=Rassword renewal required
 client=Client
-user=User
+user=User: 
 logout=Logout
 switchLocale=Switch locale
 process_monitor=Process Monitor
