--- a/webclient/src/main/resources/i18n/sec_messages.properties
+++ b/webclient/src/main/resources/i18n/sec_messages.properties
@@ -1,6 +1,5 @@
 feature.administration.title=Administration
 feature.SEC=Administration
-
 date.format=dd.MM.yyyy
 username=Benutzername
 password=Passwort
@@ -11,7 +10,7 @@ loginFailureD=Benutzer ist deaktiviert
 loginFailureL=Konto ist gesperrt
 loginFailureLdapDisabled=LDAP-Verbindung ist deaktiviert. Bitte wenden Sie sich an den Systemadministrator.
 force.pw.change=Passwort\u00E4nderung erforderlich
-client=Mandant
+client=Mandant:
 user=Benutzer: 
 logout=Logout
 switchLocale=Sprache wechseln
