--- a/webclient/src/main/resources/i18n/sec_messages_en.properties
+++ b/webclient/src/main/resources/i18n/sec_messages_en.properties
@@ -1,6 +1,5 @@
 feature.administration.title=Administration
 feature.SEC=Administration
-
 date.format=dd/MM/yyyy
 username=Username
 password=Password
@@ -11,7 +10,7 @@ loginFailureD=User is deactivated
 loginFailureL=Account is locked
 loginFailureLdapDisabled=LDAP-Connection is disabled. Please contact system administrator.
 force.pw.change=Rassword renewal required
-client=Client
+client=Client:
 user=User: 
 logout=Logout
 switchLocale=Switch locale
