group copy part 1

--- a/webclient/src/main/resources/i18n/sec_messages.properties
+++ b/webclient/src/main/resources/i18n/sec_messages.properties
@@ -53,6 +53,7 @@ groupsActionNew=Neu
 groupsActionSave=Speichern
 groupsActionDelete=L\u00F6schen
 groupsActionEdit=Rollen Zuordnung bearbeiten
+groupsActionCopy=Kopieren
 groupsTableErrorMessage=\u00C4nderungen wurden nicht gespeichert. Details siehe unten.
 groupsTableName=Gruppe
 groupsTableDescription=Beschreibung
