--- a/webclient/src/main/resources/i18n/sec_messages_en.properties
+++ b/webclient/src/main/resources/i18n/sec_messages_en.properties
@@ -53,6 +53,7 @@ groupsActionNew=New
 groupsActionSave=Save
 groupsActionDelete=Delete
 groupsActionEdit=Edit role assignment
+groupsActionCopy=Copy
 groupsTableErrorMessage=Changes haven't been saved. For details see bottom.
 groupsTableName=Group
 groupsTableDescription=Description
