group copy part 2

--- a/webclient/src/main/resources/i18n/sec_messages.properties
+++ b/webclient/src/main/resources/i18n/sec_messages.properties
@@ -61,6 +61,10 @@ groupsTableStatus=Status
 groupsTableActions=Aktionen
 groupRoleAssignmentHeader=Zuordnung von Rollen zur Gruppe:
 groupAssigned=Zugeordnet?
+groupCopyHeader=Zu kopierende Gruppe:
+buttonCancel=Abbrechen
+buttonCopy=Kopieren
+groupsTableClientSelect=Mandant
 
 userTitle=Benutzerkonfiguration
 usersActionNew=Neu
