--- a/webclient/src/main/resources/i18n/sec_messages_en.properties
+++ b/webclient/src/main/resources/i18n/sec_messages_en.properties
@@ -61,6 +61,10 @@ groupsTableStatus=Status
 groupsTableActions=Actions
 groupRoleAssignmentHeader=Assignment of roles to group:
 groupAssigned=Assigned?
+groupCopyHeader=Group to copy:
+buttonCancel=Cancel
+buttonCopy=Copy
+groupsTableClientSelect=Client
 
 userTitle=User-Configuration
 usersActionNew=New
