copy grup part 3

--- a/webclient/src/main/resources/i18n/sec_messages.properties
+++ b/webclient/src/main/resources/i18n/sec_messages.properties
@@ -65,6 +65,7 @@ groupCopyHeader=Zu kopierende Gruppe:
 buttonCancel=Abbrechen
 buttonCopy=Kopieren
 groupsTableClientSelect=Mandant
+groupsTableNewName=Neuer Gruppenname
 
 userTitle=Benutzerkonfiguration
 usersActionNew=Neu
