--- a/webclient/src/main/resources/i18n/sec_messages_en.properties
+++ b/webclient/src/main/resources/i18n/sec_messages_en.properties
@@ -65,6 +65,7 @@ groupCopyHeader=Group to copy:
 buttonCancel=Cancel
 buttonCopy=Copy
 groupsTableClientSelect=Client
+groupsTableNewName=New Group Name
 
 userTitle=User-Configuration
 usersActionNew=New
